# bat_classifier

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.batdetect2  LICENSE  NOTICE  README.md  pyproject.toml
app/: __init__.py  audio.py  backend.py  batdetect2_backend.py  cli.py  config.py  main.py  run_batdetect2_backend.py  service.py
tests/: test_api.py
tests/fixtures/: mock_classifier.py
